--- a/FrontEnd/src/app/user-page/user-page.page.html
+++ b/FrontEnd/src/app/user-page/user-page.page.html
@@ -16,38 +16,32 @@
             <ion-col size="7" offset="1" style="--ion-background-color: #fff;">
                 <ion-grid fixed>
                     <ng-container *ngFor="let post of listPosts; let ind = index">
-                        <ion-row>
-                            <ion-col>
-                                <ion-card>
-                                    <ion-grid fixed>
-                                        <ion-row>
-                                            <ion-col size="1" class="likescase ion-text-center">
-                                                <ion-icon name="heart-outline"></ion-icon>
-                                                {{post.likes}}
-                                                <hr>
-                                                <ion-icon name="heart-dislike-outline"></ion-icon>
-                                                {{post.dislikes}}
-                                            </ion-col>
-                                            <ion-col size="9">
-                                                <ion-card-header>
-                                                    <ion-card-title><a [routerLink]="[ '/post', post.id]">{{post.title}}</a></ion-card-title>
-                                                    <ion-card-subtitle>{{post.date}}</ion-card-subtitle>
-                                                </ion-card-header>
-                                            </ion-col>
-                                            <ion-col size="2">
-                                                <img class="thumbnail" src="../../assets/profile.jpg" />
-                                            </ion-col>
-                                        </ion-row>
-                                    </ion-grid>
-                                </ion-card>
-                            </ion-col>
-                        </ion-row>
+                        <ion-card>
+                            <ion-grid fixed>
+                                <ion-row>
+                                    <ion-col size="1" class="likescase ion-text-center">
+                                        <ion-icon name="heart-outline"></ion-icon>
+                                        {{post.likes}}
+                                        <hr>
+                                        <ion-icon name="heart-dislike-outline"></ion-icon>
+                                        {{post.dislikes}}
+                                    </ion-col>
+                                    <ion-col size="9">
+                                        <div class="postedby">By you - {{post.date}}</div>
+                                        <h6 class="topiclink" *ngIf="post.type == 0 || post.type == 1"><a [routerLink]="[ '/topic', post.topic.id]">t/{{post.topic.title}}</a></h6>
+                                        <h6 class="topiclink" *ngIf="post.type == 2"><a [routerLink]="[ '/topic', post.topic.id]">ev/{{post.topic.title}}</a></h6>
+                                        <h3 class="postlink"><a [routerLink]="[ '/post', post.id]">{{post.title}}</a></h3>
+                                        <!-- <div class="postlink"><a [routerLink]="[ '/post', post.id]">{{post.title}}</a></div> -->
+                                    </ion-col>
+                                    <ion-col size="2" *ngIf="post.type == 2">
+                                        <img class="thumbnail" src="../../../assets/event-invitation-redimg.jpg" />
+                                    </ion-col>
+                                </ion-row>
+                            </ion-grid>
+                        </ion-card>
                     </ng-container>
                 </ion-grid>
-
             </ion-col>
-            <!-- <ion-col size="1">
-            </ion-col> -->
             <ion-col size="3">
                 <div class="widget">
                     <h4 class="profiler"></h4>
@@ -77,7 +71,7 @@
 
                     <hr>
                 </div>
-                <div class="widget w-center">
+                <!-- <div class="widget w-center">
                     <h4 class="usertopics">Joined topics</h4>
                     <hr>
                     <ion-list>
@@ -85,13 +79,10 @@
                             <ion-label>Awesome Label</ion-label>
                         </ion-item>
                     </ion-list>
-                </div>
+                </div> -->
             </ion-col>
 
         </ion-row>
-        <!-- <ion-row>
-
-        </ion-row> -->
     </ion-grid>
 
 </ion-content>
