--- a/FrontEnd/src/app/user-page/user-page.page.scss
+++ b/FrontEnd/src/app/user-page/user-page.page.scss
@@ -119,5 +119,35 @@ h4.usertopics {
 }
 
 .likescase {
-    border-right: 1px solid #c9c9c9;
+    background-color: #f2f2f2;
+    padding-top: 10px;
+}
+
+.postedby {
+    padding: 0 0 0 15px;
+    a {
+        color: #737373;
+        text-decoration: none;
+    }
+}
+
+h3.postlink {
+    padding: 0 0 5px 15px;
+    a {
+        color: #353535;
+        text-decoration: none;
+    }
+}
+
+h6.topiclink {
+    padding: 5px 0 0 15px;
+    margin: 0;
+    a {
+        color: #737373;
+        text-decoration: none;
+    }
+}
+
+img.thumbnail {
+    border-radius: 50%;
 }
